guestbook/all-in-one/namespace-guestbook.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guestbook
  labels: 
    name: guestbook
