guestbook/all-in-one/ing-guestbook.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - guestbook.releasr.io
    secretName: guestbook-cert-secret
  rules:
  - host: guestbook.releasr.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
